Fixing popup style on mobile size.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -632,7 +632,7 @@ tr:first-of-type .css-1gyktb4.Cell-horizontalCell {
 .MuiTableBody-root {
   .MuiTableRow-root {
     &:nth-child(19), &:nth-child(20), &:nth-child(21), &:nth-child(22) {
-      display: none;
+      // display: none;
     }
   }
 }
@@ -640,7 +640,7 @@ tr:first-of-type .css-1gyktb4.Cell-horizontalCell {
 .MuiTableCell-root {
   .Label-label {
     &:nth-child(19), &:nth-child(20), &:nth-child(21), &:nth-child(22) {
-      display: none;
+      // display: none;
     }
   }
 }
